--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -39,7 +39,7 @@
     <header id="top">
       <!-- Home Link -->
       <a id="logo" href="{{ HOME_PATH }}" title="回到首页">
-        <img src="{{ ASSET_PATH }}/img/logo.png" alt="{{ site.title }}">
+        <img src="{{ ASSET_PATH }}/img/logo.png" alt="{{ site.title }}" width=50 heihgt=25>
       </a>
       <!-- Navigation Bar -->
       <nav id="navbar">
